--- a/index.html
+++ b/index.html
@@ -4,35 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <style>
+*{
+    margin: auto;
+}
+.container{
+    width: 50vw;
+    height: 70vw;
+    background-color: whitesmoke; 
+}
+.header{
+    width: 50vw;
+    height: 80px;
+    background-color: #00b4d8;
+}
+.logo{
+width: 50px;
+height: 50px;
+background-color: green;
+border-radius: 50%;
+float: left;
+margin-top: 15px;
+margin-left: 10px;
+background-image: url("images.png");
+background-position: center;
+background-size: contain;
+background-repeat: no-repeat;
+}
+.nav ul li{
+float: left;
+margin-top: 25px;
+margin-left: 15px;
+list-style: none;
+background-color: aqua;
+padding: 10px;
+border-radius: 5px;
+transition: 0.5s linear;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </style>
 </head>
 <body>
+    
+<div class="container">
+<!-- header starts -->
+<div class="header">
+    <div class="logo" ></div>
+<div class="nav">
+    <ul>
+        <li><a href="Home"></a></li>
+        <li><a href="products"></a></li>
+        <li><a href="about us"></a></li> 
+        <li><a href="contact us"></a></li> 
+    </ul>
+</div>
+</div>
+<!-- header ends here -->
+<!-- sidebar starts here -->
+<div class="sidebar">
+    
+    <ul>
+        <li>Smart Watches</li>    
+        <li>Airpods</li>
+        <li>Speakers</li>
+        <li>Mobile Chargers</li>
+        <li>Tripod Stand</li>
+        <li>Bands</li>
+    </ul>
+</div>
+<!-- sidebar ends here -->
+<!-- body area starts here -->
+<div class="content">
+<h1>This is area is for content</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, commodi ea!</p>
 
-    <a href="INDEX.HTML">home</a>
-    <a href="contact.html">contact us</a>
-    <a href="about.html">about us</a>
-    <a href="Order.html">orderlist&unorderlist</a>
-    <a href="table.html">signup</a>
-    <a href="images&form.html">form</a>
-<br>
+</div>
+<!-- body area ends here -->
+<!-- footer starts here -->
+<div class="footer">
+    <h4>All &copy; Rights Reserved </h4>
+</div>
 
-<H1>HARIS</H1>    
-<H2>HARIS</H2>
-<h3>HARIS</h3>
-<h4>HARIS</h4>
-<h5>HARIS</h5>
-<h6>HARIS</h6>
-<sub>x2</sub>
-<sup>x2</sup>
-<u>HARIS</u>
-<i>HARIS</i>
-<b>HARIS</b>
-<del>HARIS</del>
-<br>
-<br>
-    <p><b>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Sit, aspernatur ullam. Ex sint distinctio maxime aliquam, delectus earum dolore enim dolores provident,
-        reprehenderit deserunt illum qui ea temporibus nemo cum.</p></b>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 
 </body>
 </html>
