--- a/index.html
+++ b/index.html
@@ -4,123 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-*{
-    margin: auto;
-}
-.container{
-    width: 50vw;
-    height: 70vw;
-    background-color: whitesmoke; 
-}
-.header{
-    width: 50vw;
-    height: 80px;
-    background-color: #00b4d8;
-}
-.logo{
-width: 50px;
-height: 50px;
-background-color: green;
-border-radius: 50%;
-float: left;
-margin-top: 15px;
-margin-left: 10px;
-background-image: url("images.png");
-background-position: center;
-background-size: contain;
-background-repeat: no-repeat;
-}
-.nav ul li{
-float: left;
-margin-top: 25px;
-margin-left: 15px;
-list-style: none;
-background-color: aqua;
-padding: 10px;
-border-radius: 5px;
-transition: 0.5s linear;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </style>
 </head>
 <body>
-    
-<div class="container">
-<!-- header starts -->
-<div class="header">
-    <div class="logo" ></div>
-<div class="nav">
-    <ul>
-        <li><a href="Home"></a></li>
-        <li><a href="products"></a></li>
-        <li><a href="about us"></a></li> 
-        <li><a href="contact us"></a></li> 
-    </ul>
-</div>
-</div>
-<!-- header ends here -->
-<!-- sidebar starts here -->
-<div class="sidebar">
-    
-    <ul>
-        <li>Smart Watches</li>    
-        <li>Airpods</li>
-        <li>Speakers</li>
-        <li>Mobile Chargers</li>
-        <li>Tripod Stand</li>
-        <li>Bands</li>
-    </ul>
-</div>
-<!-- sidebar ends here -->
-<!-- body area starts here -->
-<div class="content">
-<h1>This is area is for content</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, commodi ea!</p>
+        <video src="assets/video.mp4" controls loop autoplay muted width="500px" height="500px"></video>   
 
-</div>
-<!-- body area ends here -->
-<!-- footer starts here -->
-<div class="footer">
-    <h4>All &copy; Rights Reserved </h4>
-</div>
+<audio src="assets/audio.mp3" controls loop autoplay></audio>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3436.1862709693846!2d67.0743596!3d24.8633316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33ea3db108f41%3A0x42acc4507358b160!2sAptech%20Learning%2C%20Shahrah%20e%20Faisal%20Center!5e1!3m2!1sen!2s!4v1737184514181!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
