--- a/index.html
+++ b/index.html
@@ -4,62 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-button{
-    color: whitesmoke;
-    background-color: black;
-    width: 200px;
-    height: 200px;
-    font-size: xx-large;
-    border-radius: 25%;
-}
-button:hover{
-background-color: red;
-font-size: 25px;
-animation: both;
-animation-duration: 2s;
-}
-
-    </style>
 </head>
 <body>
-    <button onclick="add()">add</button>
-    <button onclick="sub()">sub</button>
-    <button onclick="multi()">multi</button>
-    <button onclick="divi()">divi</button>
-    <!-- operator +-*/ -->
-
     <script>
-        // document.write(12-2);
-        // document.write("hello world");
-        // alert("hello world");
-        // console.log("hello world");
-function add(){
-    var num1=parseInt(prompt("Enter The First Value"));
-    var num2=parseInt(prompt("Enter The Second Value"));
+        // var age = 10;
+        // age += 5; age = age + 5; 
+        // document.write(age);
 
-    document.write("<h1> The Addition Value is :"+(num1+num2)+ "</h1>");
-}
-function sub(){
-    var num1=parseInt(prompt("Enter The First Value"));
-    var num2=parseInt(prompt("Enter The Second Value"));
 
-    document.write("<h1> The substration Value is :"+(num1-num2)+ "</h1>");
-}
-function multi(){
-    var num1=parseInt(prompt("Enter The First Value"));
-    var num2=parseInt(prompt("Enter The Second Value"));
-
-    document.write("<h1> The multiplication Value is :"+(num1*num2)+ "</h1>");
-}
-function divi(){
-    var num1=parseInt(prompt("Enter The First Value"));
-    var num2=parseInt(prompt("Enter The Second Value"));
-
-    document.write("<h1> The divided Value is :"+(num1/num2)+ "</h1>");
-}
-
+//         var age = 18;
+// if(!(age) == 18){
+//     document.write("you are eligible for this job")
+// }else{
+//     document.write("you are not eligible for this job")
+// }
     </script>
-
 </body>
 </html>
