--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        // var age = 10;
-        // age += 5; age = age + 5; 
-        // document.write(age);
-
-
-//         var age = 18;
-// if(!(age) == 18){
-//     document.write("you are eligible for this job")
-// }else{
-//     document.write("you are not eligible for this job")
-// }
-    </script>
+<h2 id="text">Hello world</h2>
+<button onclick="demo()">Click Here</button>
+<script>
+function demo(){
+    document.getElementById("text").innerHTML = "welcome page";
+    document.getElementById("text").style = "background-color:red; padding:10px";
+}
+</script>
 </body>
 </html>
