--- a/index.html
+++ b/index.html
@@ -3,16 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> -->
+     <link rel="stylesheet" href="bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
-<h2 id="text">Hello world</h2>
-<button onclick="demo()">Click Here</button>
-<script>
-function demo(){
-    document.getElementById("text").innerHTML = "welcome page";
-    document.getElementById("text").style = "background-color:red; padding:10px";
-}
-</script>
+    <h1 class="text-info">hello world</h1>
+    <h2 class="text-danger">hello world</h2>
+    <h3 class="text-primary">hello world</h3>
+    <h4 class="text-secondary">hello world</h4>
+    <h5 class="text-warning">hello world</h5>
+    <h6 class="text-success">hello world</h6>
+
+<p class="display-1 bg-danger">Lorem ipsum dolor, sit amet?</p>
+<p class="display-2 bg-info">Lorem ipsum dolor, sit amet?</p>
+<p class="display-3 bg-primary">Lorem ipsum dolor, sit amet?</p>
+<p class="display-4 bg-secondary">Lorem ipsum dolor, sit amet?</p>
+<p class="display-5 bg-warning">Lorem ipsum dolor, sit amet?</p>
+<p class="display-6 bg-success">Lorem ipsum dolor, sit amet?</p>
+
+<p class="h1">Lorem ipsum dolor, sit amet?</p>
+<p class="h2">Lorem ipsum dolor, sit amet?</p>
+<p class="h3">Lorem ipsum dolor, sit amet?</p>
+<p class="h4">Lorem ipsum dolor, sit amet?</p>
+<p class="h5">Lorem ipsum dolor, sit amet?</p>
+<p class="h6">Lorem ipsum dolor, sit amet?</p>
+
+
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script-->
+        <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
