--- a/index.html
+++ b/index.html
@@ -3,35 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> -->
-     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-info">hello world</h1>
-    <h2 class="text-danger">hello world</h2>
-    <h3 class="text-primary">hello world</h3>
-    <h4 class="text-secondary">hello world</h4>
-    <h5 class="text-warning">hello world</h5>
-    <h6 class="text-success">hello world</h6>
-
-<p class="display-1 bg-danger">Lorem ipsum dolor, sit amet?</p>
-<p class="display-2 bg-info">Lorem ipsum dolor, sit amet?</p>
-<p class="display-3 bg-primary">Lorem ipsum dolor, sit amet?</p>
-<p class="display-4 bg-secondary">Lorem ipsum dolor, sit amet?</p>
-<p class="display-5 bg-warning">Lorem ipsum dolor, sit amet?</p>
-<p class="display-6 bg-success">Lorem ipsum dolor, sit amet?</p>
-
-<p class="h1">Lorem ipsum dolor, sit amet?</p>
-<p class="h2">Lorem ipsum dolor, sit amet?</p>
-<p class="h3">Lorem ipsum dolor, sit amet?</p>
-<p class="h4">Lorem ipsum dolor, sit amet?</p>
-<p class="h5">Lorem ipsum dolor, sit amet?</p>
-<p class="h6">Lorem ipsum dolor, sit amet?</p>
-
-
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script-->
-        <script src="bootstrap.bundle.min.js"></script>
+    <div class="container">
+        <div class="row mt-2 text-center">
+            <div class="col-1 bg-info me-1 ">1</div>    
+            <div class="col-1 bg-info me-1 ">2</div>    
+            <div class="col-1 bg-info me-1 ">3</div>    
+            <div class="col-1 bg-info me-1 ">4</div>    
+            <div class="col-1 bg-info me-1 ">5</div>    
+            <div class="col-1 bg-info me-1 ">6</div>    
+            <div class="col-1 bg-info me-1 ">7</div>    
+            <div class="col-1 bg-info me-1 ">8</div>    
+            <div class="col-1 bg-info me-1 ">9</div>    
+            <div class="col-1 bg-info me-1 ">10</div>    
+            <div class="col-1 bg-info me-1 ">11</div>    
+            <div class="col bg-info me-1 ">12</div>    
+        </div>
+        <div class="row mt-2 text-center">
+            <div class="col-3 bg-danger me-1 ">1</div>    
+            <div class="col-3 bg-danger me-1 ">2</div>    
+            <div class="col-3 bg-danger me-1 ">3</div>    
+            <div class="col bg-danger me-1 ">4</div>        
+        </div>
+        <div class="row mt-2 text-center">
+            <div class="col-4 bg-success me-1 ">1col</div>    
+            <div class="col-4 bg-success me-1 ">2col</div>    
+            <div class="col bg-success me-1 ">3col</div>           
+        </div>
+        <div class="row mt-2 text-center">
+            <div class="col-6 bg-warning me-1 fw-bolder ">1col</div>    
+            <div class="col bg-warning me-1 fw-lighter ">2col</div>           
+        </div>
+        <div class="row mt-2 text-center">
+            <div class="col-12 bg-secondary me-1 text-white ">1col</div>    
+        </div>
+    </div>
+    <br>
+<!-- the coloumn add work is done -->
+<!-- now adding pictures in coloumn -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2 ">
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-lg-4">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-4">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-4">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-lg-6">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-6">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2 text-lg-center ">
+            <div class="col-lg-12">
+                <img src="images (1).jpg"  alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>   
+ <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
