--- a/index2.html
+++ b/index2.html
@@ -3,17 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
-    <h2>Login id : <span id="name"></span></h2>
-    <button onclick="func()">Login</button>
-
-    <script>
-        function func(){
-            var myname = prompt("Enter Login Name");
-            document.getElementById("name").innerHTML = myname;
-        }
-    </script>
+    <div class="container">
+        <div class="row mt-2">
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-1">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2 ">
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="row col-lg-3">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-lg-4">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-4">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-4">
+                <img src="images (1).jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-lg-6">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+            <div class="col-lg-6">
+                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row mt-2 text-lg-center ">
+            <div class="col-lg-12">
+                <img src="images (1).jpg"  alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>   
+    <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
