--- a/index.html
+++ b/index.html
@@ -7,121 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row mt-2 text-center">
-            <div class="col-1 bg-info me-1 ">1</div>    
-            <div class="col-1 bg-info me-1 ">2</div>    
-            <div class="col-1 bg-info me-1 ">3</div>    
-            <div class="col-1 bg-info me-1 ">4</div>    
-            <div class="col-1 bg-info me-1 ">5</div>    
-            <div class="col-1 bg-info me-1 ">6</div>    
-            <div class="col-1 bg-info me-1 ">7</div>    
-            <div class="col-1 bg-info me-1 ">8</div>    
-            <div class="col-1 bg-info me-1 ">9</div>    
-            <div class="col-1 bg-info me-1 ">10</div>    
-            <div class="col-1 bg-info me-1 ">11</div>    
-            <div class="col bg-info me-1 ">12</div>    
-        </div>
-        <div class="row mt-2 text-center">
-            <div class="col-3 bg-danger me-1 ">1</div>    
-            <div class="col-3 bg-danger me-1 ">2</div>    
-            <div class="col-3 bg-danger me-1 ">3</div>    
-            <div class="col bg-danger me-1 ">4</div>        
-        </div>
-        <div class="row mt-2 text-center">
-            <div class="col-4 bg-success me-1 ">1col</div>    
-            <div class="col-4 bg-success me-1 ">2col</div>    
-            <div class="col bg-success me-1 ">3col</div>           
-        </div>
-        <div class="row mt-2 text-center">
-            <div class="col-6 bg-warning me-1 fw-bolder ">1col</div>    
-            <div class="col bg-warning me-1 fw-lighter ">2col</div>           
-        </div>
-        <div class="row mt-2 text-center">
-            <div class="col-12 bg-secondary me-1 text-white ">1col</div>    
+   <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+             
+                <table class="table table-striped table-dark">
+                    <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>Name</th>
+                            <th>Class</th>
+                            <th>Phone</th>
+                            <th>Address</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>hasan</td>
+                            <td>12</td>
+                            <td>karachi</td>
+                            <td>Pakistan</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>hussain</td>
+                            <td>12</td>
+                            <td>karachi</td>
+                            <td>Pakistan</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Ali</td>
+                            <td>12</td>
+                            <td>karachi</td>
+                            <td>Pakistan</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>haris</td>
+                            <td>12</td>
+                            <td>karachi</td>
+                            <td>Pakistan</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>anas</td>
+                            <td>12</td>
+                            <td>karachi</td>
+                            <td>Pakistan</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-    <br>
-<!-- the coloumn add work is done -->
-<!-- now adding pictures in coloumn -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-1">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-        </div>
-        <div class="row mt-2 ">
-            <div class="row col-lg-3">
-                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
-            </div>
-            <div class="row col-lg-3">
-                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
-            </div>
-            <div class="row col-lg-3">
-                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
-            </div>
-            <div class="row col-lg-3">
-                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-lg-4">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-4">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-4">
-                <img src="images (1).jpg" alt="" class="img-fluid">
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-lg-6">
-                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
-            </div>
-            <div class="col-lg-6">
-                <img src="stylish-cat-sunglasses-poses-confidently-rocky-beach-capturing-unique-blend-humor-charm-warm-glow-sunset-349482060.webp" alt="" class="img-fluid">
-            </div>
-        </div>
-        <div class="row mt-2 text-lg-center ">
-            <div class="col-lg-12">
-                <img src="images (1).jpg"  alt="" class="img-fluid">
-            </div>
-        </div>
-    </div>   
- <script src="bootstrap.bundle.min.js"></script>
+
+    <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
